# Game-of-Life

./: CMakeLists.txt  LICENSE  README.md
include/: empty.txt
src/: main.cpp
